@startuml improvedHospitalSystem
title Improved Hospital System Architecture

' ------------------ Base Human ------------------
abstract class Human {
  - name : string
  - age : unsigned
  + getName() : string
  + getAge() : unsigned
  + displayInfo() : void
}

class Doctor extends Human {
  - expertise : string
  + getExpertise() : string
}

class Patient extends Human {
  - diagnosis : string
  - needs : string
  + getDiagnosis() : string
  + getNeeds() : string
}

' ------------------ Booking ------------------
class Booking {
  - year : unsigned
  - month : unsigned
  - day : unsigned
  - beginHour : unsigned
  - beginMinute : unsigned
  - endHour : unsigned
  - endMinute : unsigned
  - patient : Patient*
  - doctor : Doctor*
}

' ------------------ Data Class ------------------
class Hospital {
  - name : string
  - humans : vector<Human*>
  - doctors : vector<Doctor*>
  - patients : vector<Patient*>
  - bookings : vector<Booking*>
}

' ------------------ Managers ------------------
class PeopleManager {
  + addDoctor(hospital : Hospital*, doctor : Doctor*) : bool
  + addPatient(hospital : Hospital*, patient : Patient*) : bool
  + checkDoctor(doctor : Doctor*) : bool
  + checkPatient(patient : Patient*, doctors : vector<Doctor*>) : bool
}

class BookingManager {
  + addBooking(hospital : Hospital*, booking : Booking*) : bool
  + checkValidDate(booking : Booking*) : bool
  + checkValidTime(booking : Booking*) : bool
  + hasConflict(hospital : Hospital*, booking : Booking*) : bool
  + getBookings(hospital : Hospital*) : vector<Booking*>
}

' ------------------ Relationships ------------------
Hospital o--> Doctor
Hospital o--> Patient
Hospital o--> Booking

Booking --> Doctor
Booking --> Patient

PeopleManager --> Hospital : modifies >
BookingManager --> Hospital : modifies >


@enduml
